--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -9,17 +9,32 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+  %---------------------------------------------------------
+\cventry
+{Freelance Software Engineer} % Job title
+{rViz Ltd.} % Organization
+{Manchester UK - Remote} % Location
+{Feb. 2023 - May 2023} % Date(s)
+{
+  \begin{cvitems} % Description(s) of tasks/responsibilities
+    \item {Initial consulting on Azure B2C and corporate Active Directory integration.}
+    \item {Building an application to handle user assignment of Microsoft PowerBI Reports.}
+    \item {React, Typescript, Node, Azure Functions, Azure B2C, Active Directory}
+  \end{cvitems}
+}
+
 %---------------------------------------------------------
 \cventry
 {Senior Software Engineer} % Job title
 {Qubisoft Pty Ltd} % Organization
-{Melbourne, Australia} % Location
+{Melbourne, Australia - Remote} % Location
 {Jan. 2021 - Nov. 2022} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
     \item {Built a web application to handle market bidding for an Australian electricity market participant, focusing on high availability and security.  React, Typescript, .NET Core Web API.}
     \item {Built a video speed dating application.  React, .NET Core, Azure Functions, Azure Service Bus, Twilio Video, Stripe, Active Directory B2C.}
     \item {Implemented accounting integration for a hospitality industry application.  React, Python, Django.}
+    \item {Mentoring junior developers.}
   \end{cvitems}
 }
 
@@ -41,7 +56,7 @@
 
 %---------------------------------------------------------
 \cventry
-{Founder)} % Job title
+{Founder} % Job title
 {Youniqify} % Organization
 {Melbourne, Australia} % Location
 {Aug. 2014 - Apr. 2016} % Date(s)
