--- a/examples/cv/summary.tex
+++ b/examples/cv/summary.tex
@@ -10,6 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Full stack software engineer with experience across start‑up and enterprise environments. A focus on end user experience and writing clean, easy
-to maintain code. Holds computer science degree from a top university, with good communication and interpersonal skills.
+Full stack software engineer with extensive experience with React, Typescript, and NET Core in both start‑up and enterprise environments. 
+A focus on end user experience and writing clean, easy to maintain code. 
+Holds computer science degree from a top university, with good communication and interpersonal skills.
 \end{cvparagraph}
