--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -17,9 +17,10 @@
 {Feb. 2023 - May 2023} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {Initial consulting on Azure B2C and corporate Active Directory integration.}
-    \item {Building an application to handle user assignment of Microsoft PowerBI Reports.}
-    \item {React, Typescript, Node, Azure Functions, Azure B2C, Active Directory}
+    \item {Provided expert consultation on modern development practices and integrating Azure B2C and Active Directory.}
+    \item {Guided architecture and technology decisions.}
+    \item {Developed a robust application for efficient user management and PowerBI report assignment.}
+    \item {React, Typescript, Node, Azure Functions, Azure B2C, Active Directory.}
   \end{cvitems}
 }
 
@@ -31,10 +32,12 @@
 {Jan. 2021 - Nov. 2022} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {Built a web application to handle market bidding for an Australian electricity market participant, focusing on high availability and security.  React, Typescript, .NET Core Web API.}
-    \item {Built a video speed dating application.  React, .NET Core, Azure Functions, Azure Service Bus, Twilio Video, Stripe, Active Directory B2C.}
-    \item {Implemented accounting integration for a hospitality industry application.  React, Python, Django.}
-    \item {Mentoring junior developers.}
+    \item {Led the development of an application to handle price and capacity bidding for an Australian electricity market participant, improving bidding efficiency and saving staff time by automating previously partly manual processes.} 
+    \item {React, Typescript, .NET Core Web API, C\#, and MySQL.}
+    \item {Developed a serverless architecture application for a speed dating company, enabling online speed dating events for up to 20 people with features such as group video chats, event booking and payment, and match display.}
+    \item {Azure Functions, Service Bus, B2C, React, Typescript, C\#, Twilio, and Stripe.}
+    \item {Maintained and enhanced a hospitality industry stock management application using React and Django.}
+    \item {Mentored junior engineers and contributed to architecture decisions in the team.}
   \end{cvitems}
 }
 
@@ -46,10 +49,10 @@
 {Jul 2019 - Dec 2020} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {A flexible full stack role within a small engineering team in a rapidly growing start‑up. Includes contributing to requirements workshops, design discussions, development, devops and deployment, working with a distributed micro‑services architecture.}
+    \item {A flexible full stack role within a small engineering team in a rapidly growing start‑up, working with a distributed micro‑services architecture.}
     \item {Responsible for new training program functionality for a major product including web front end and supporting APIs.}
     \item {Key part of a multi disciplinary and international group managing the integration of a newly acquired product onto VALD systems, including implementing significant permissions system enhancement.}
-    \item {Responsible for mentoring a junior developer.}
+    \item {Guided and supported junior engineers in their professional growth.}
     \item {Technologies: C\#, .NET Core, Typescript, React, Azure Table Storage (NoSQL), SQL Server, Redis, Terraform, Jenkins, Octopus.}
   \end{cvitems}
 }
@@ -62,7 +65,7 @@
 {Aug. 2014 - Apr. 2016} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {Development and marketing of a configurable product customisation web app aimed at small businesses.}
+    \item {Building a flexible product customisation application for integration with small online retailers.}
     \item {Technologies: Typescript, React, Redux, Golang, Google Cloud Platform.} 
   \end{cvitems}
 }
@@ -75,8 +78,7 @@
 {Jun. 2017 - Jul. 2018} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {Analysed requirements, design and development of an Android / iOS mobile shopping app.}
-    \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
+    \item {Built a multi-platform mobile shopping app for a wine retailer.}
     \item {Technologies: Xamarin, C\#, .NET, MVVM, XAML, SQLite.}
   \end{cvitems}
 }
@@ -89,7 +91,7 @@
 {Jan. 2017 - Jul. 2018} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item {Analysed requirements, designed and developed a jewellery customisation web app and new Shopify ecommerce site.}
+    \item {Built a multi-platform mobile shopping app for a wine retailer}
     \item {Technologies: JQuery, Javascript, HTML, CSS.}
   \end{cvitems}
 }
@@ -104,10 +106,8 @@
   \begin{cvitems} % Description(s) of tasks/responsibilities
     \item {Working on the Bluedoor product, a third party superannuation, fund platform and wealth manager registry solution.}
     \item {Played a significant role in the development of Electronic Business Submission for a large UK client, dramatically reducing end user workload per case.}
-    \item {Travelling to India to train developers in newly established office.}
-    \item {Included a period as acting Technical Lead covering paternity leave.}
-    \item {Software design, development, testing, and producing documentation artifacts.}
-    \item {Included requirements analysis, participating in development workshops and conference calls.}
+    \item {Facilitated knowledge transfer to newly established Indian development office through on-site training and online support.}
+    \item {Served as Technical Lead to cover paternity leave, ensuring seamless project continuation.}
     \item {Technologies: .NET Framework, VB.NET, SQL Server.}
   \end{cvitems}
 }
