--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -55,8 +55,8 @@
 \position{Software Engineer}
 \address{14 Sharps Green, Horringer, IP29 5PP, United Kingdom}
 
-\mobile{(+44) 7496 963 390}
-\email{me@stephenhopkins.dev}
+%\mobile{(+44) 7496 963 390}
+\email{steve417@gmail.com}
 %\dateofbirth{January 1st, 1970}
 \homepage{www.stephenhopkins.dev}
 \github{stephen-hopkins}
@@ -99,6 +99,7 @@
 % \input{cv/skills.tex}
 \input{cv/summary.tex}
 \input{cv/experience.tex}
+\newpage
 \input{cv/education.tex}
 \input{cv/other-experience.tex}
 % \input{cv/extracurricular.tex}
