--- a/examples/cv/summary.tex
+++ b/examples/cv/summary.tex
@@ -10,7 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Full stack software engineer with extensive experience with React, Typescript, and NET Core in both start‑up and enterprise environments. 
+Full stack software engineer with extensive experience with React, Typescript, and .NET Core in both start‑up and enterprise environments. 
 A focus on end user experience and writing clean, easy to maintain code. 
-Holds computer science degree from a top university, with good communication and interpersonal skills.
+Looking for remote or hybrid London based opportunities.
 \end{cvparagraph}
