--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -55,7 +55,7 @@
 \position{Software Engineer}
 \address{14 Sharps Green, Horringer, IP29 5PP, United Kingdom}
 
-%\mobile{(+44) 7496 963 390}
+\mobile{(+44) 07300 959 317}
 \email{steve417@gmail.com}
 %\dateofbirth{January 1st, 1970}
 \homepage{www.stephenhopkins.dev}
