--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -74,7 +74,7 @@
 \cventry
 {Contract Developer} % Job title
 {Bacco Wines} % Organization
-{Melbourne, Australia \& LA, U.S.A} % Location
+{Melbourne, Australia} % Location
 {Jun. 2017 - Jul. 2018} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
