--- a/examples/cv/summary.tex
+++ b/examples/cv/summary.tex
@@ -10,7 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Full stack software engineer with extensive experience with React, Typescript, and .NET Core in both start‑up and enterprise environments. 
-A focus on end user experience and writing clean, easy to maintain code. 
+Full stack software engineer with extensive experience with React, Typescript, and .NET / C\#.  
+Experience leading projects for a consultancy as well as working as part of a cross functional team for a startup.
 Looking for remote or hybrid London based opportunities.
 \end{cvparagraph}
